Fix spacing on schedule times

--- a/app/assets/stylesheets/schedule.css.scss
+++ b/app/assets/stylesheets/schedule.css.scss
@@ -138,7 +138,7 @@ body#ScheduleIndex {
   }
 
   section span.mins{
-    margin-left: -0.2em;
+    margin-left: -0.1em;
   }
 
 
